--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title> Title </title>
   </head>
   <body>
-
+    <img src="file:///C:/Users/Usuario/Documents/Laboratoria/JavaScript/sprin3/Repaso/index.html">
   </body>
 </html>
