--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <img src="file:///C:/Users/Usuario/Documents/Laboratoria/JavaScript/sprin3/Repaso/index.html">
+    <p>Esta es una imagen</p>
   </body>
 </html>
